src/leia
In file included from Types.cpp:3:0:
../include/Exceptions.h:8:1: error: expected class-name before ‘{’ token
 {
 ^
../include/Exceptions.h:14:1: error: expected class-name before ‘{’ token
 {
 ^
Types.cpp: In member function ‘virtual AST::type_ptr AST::ExprType::getNewType(const AST::ExprType*) const’:
Types.cpp:73:53: error: capture of non-variable ‘virtual AST::Type AST::ExprType::getTypeCode() const’ 
     return ExprType::makeType(ExprType::getTypeMap([getTypeCode()][other->getTypeCode()]));
                                                     ^
In file included from Types.cpp:1:0:
../include/Types.h:22:18: note: ‘virtual AST::Type AST::ExprType::getTypeCode() const’ declared here
     virtual Type getTypeCode() const = 0;
                  ^
Types.cpp:73:64: error: expected ‘,’ before ‘(’ token
     return ExprType::makeType(ExprType::getTypeMap([getTypeCode()][other->getTypeCode()]));
                                                                ^
Types.cpp:73:64: error: expected identifier before ‘(’ token
Types.cpp: In lambda function:
Types.cpp:73:67: error: expected ‘{’ before ‘[’ token
     return ExprType::makeType(ExprType::getTypeMap([getTypeCode()][other->getTypeCode()]));
                                                                   ^
Types.cpp: In member function ‘virtual AST::type_ptr AST::ExprType::getNewType(const AST::ExprType*) const’:
Types.cpp:73:67: error: no match for ‘operator[]’ (operand types are ‘AST::ExprType::getNewType(const AST::ExprType*) const::__lambda0’ and ‘AST::Type’)
